--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,6 +46,7 @@ nav:
           - widgets/services/channelsdvrserver.md
           - widgets/services/cloudflared.md
           - widgets/services/coin-market-cap.md
+          - widgets/services/cronicle.md
           - widgets/services/crowdsec.md
           - widgets/services/customapi.md
           - widgets/services/deluge.md
